# apps/api/src/core/transportistas/transportistas.module.ts
@@ -1,0 +1,10 @@
+import { Module } from '@nestjs/common';
+import { TransportistasController } from './transportistas.controller';
+import { TransportistasService } from './transportistas.service';
+
+@Module({
+  controllers: [TransportistasController],
+  providers: [TransportistasService],
+  exports: [TransportistasService],
+})
+export class TransportistasModule {}
